--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ebac_talks",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
